Resolve "As an administrator, I want to disable a use so that it can't log into the application but save its information"
